--- a/15_Processing_Sequences_Using_RNNs_and_CNNs.ipynb
+++ b/15_Processing_Sequences_Using_RNNs_and_CNNs.ipynb
@@ -1,6 +1,203 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 15. Processing Sequences Using RNNs and CNNs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RNNs in Focus: The chapter delves into recurrent neural networks (RNNs), a specialized neural network category capable of predicting future events, particularly in time series data.\n",
+    "\n",
+    "Versatility in Sequence Analysis: RNNs excel in analyzing sequences of arbitrary lengths, proving valuable in applications ranging from stock market predictions to autonomous driving systems and natural language processing tasks.\n",
+    "\n",
+    "Fundamentals and Training: The chapter covers fundamental concepts of RNNs and details their training using the backpropagation through time technique.\n",
+    "\n",
+    "Challenges and Solutions: Addressing challenges faced by RNNs, the text discusses unstable gradients and proposes solutions such as recurrent dropout and layer normalization. It also tackles the issue of limited short-term memory, providing insights into extending it using LSTM and GRU cells.\n",
+    "\n",
+    "Alternative Approaches for Sequential Data: While RNNs are suitable for sequential data, the text acknowledges that regular dense networks and convolutional neural networks (CNNs) can effectively handle small and long sequences, respectively.\n",
+    "\n",
+    "Introduction to WaveNet: The chapter concludes by introducing the WaveNet, a CNN architecture specifically designed for sequences with tens of thousands of time steps.\n",
+    "\n",
+    "Upcoming Exploration: The subsequent chapter promises further exploration of RNNs, emphasizing their applications in natural language processing. Additionally, newer architectures incorporating attention mechanisms will be discussed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recurrent Neurons and Layers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recurrent Neural Networks (RNNs) Overview:\n",
+    "\n",
+    "* Feedforward vs. Recurrent Networks: The text contrasts feedforward neural networks with recurrent neural networks (RNNs), highlighting the latter's bidirectional connections.\n",
+    "\n",
+    "* Basic Structure of an RNN: An introductory exploration of the simplest RNN structure, consisting of one neuron receiving inputs, producing an output, and feeding it back to itself.\n",
+    "\n",
+    "* Time Unrolling: The concept of unrolling the recurrent neuron through time, illustrating its evolution at each time step.\n",
+    "\n",
+    "* Layer of Recurrent Neurons: The extension to multiple neurons in a layer, emphasizing their connectivity to both input vectors and outputs from the previous time step.\n",
+    "\n",
+    "Mathematics Behind RNNs:\n",
+    "\n",
+    "* Weight Matrices and Output Calculation: Explanation of the weight matrices, W and W, and the mathematical formulation for computing the output of the entire recurrent layer.\n",
+    "\n",
+    "* Mini-Batch Processing: Demonstrating the simultaneous computation of the recurrent layer's output for a whole mini-batch.\n",
+    "\n",
+    "* Memory Cells: Introduction to the notion of memory cells within an RNN, highlighting their ability to retain information across time steps.\n",
+    "\n",
+    "* Cell State and Output: Describing the relationship between a cell's state at a given time step and its output, with a glimpse into more complex cells capable of learning longer patterns.\n",
+    "\n",
+    "Input-Output Sequences:\n",
+    "\n",
+    "* Simultaneous Input and Output Sequences: The capability of an RNN to handle input and output sequences concurrently, with potential applications in predicting time series like stock prices.\n",
+    "\n",
+    "* Different Sequence Architectures: An overview of various sequence architectures, including sequence-to-vector, vector-to-sequence, and Encoder-Decoder networks, each serving different purposes.\n",
+    "\n",
+    "Training Challenges:\n",
+    "\n",
+    "* Training a Recurrent Neural Network: The text concludes by posing the question of how to train an RNN, paving the way for further exploration in subsequent sections."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training RNNs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training an RNN: Backpropagation Through Time (BPTT):\n",
+    "\n",
+    "* Unrolling Through Time: The key strategy in training an RNN involves unrolling it through time, allowing for the application of regular backpropagation.\n",
+    "\n",
+    "* Backpropagation Through Time (BPTT): The process begins with a forward pass through the unrolled network, followed by the evaluation of the output sequence using a cost function. This cost function may selectively consider outputs, for instance, in a sequence-to-vector RNN where only the last output matters. Gradients of the cost function are then propagated backward through the unrolled network.\n",
+    "\n",
+    "* Model Parameter Update: The final step involves updating the model parameters using the gradients computed during BPTT. Importantly, the gradients flow backward through all relevant outputs used by the cost function, ensuring a comprehensive learning process.\n",
+    "\n",
+    "* Implementation with tf.keras: The text mentions that the complexity of BPTT is managed by tf.keras, simplifying the coding process for practitioners.\n",
+    "\n",
+    "* Readiness to Code: The section concludes by indicating the readiness to start coding, emphasizing the streamlined implementation facilitated by tf.keras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Understanding Time Series Data:**\n",
+    "\n",
+    "- *Definition:* Time series data involves sequences of one or more values per time step, with univariate time series having a single value and multivariate time series having multiple values at each time step.\n",
+    "\n",
+    "- *Common Tasks:* Predicting future values (forecasting) and imputing missing values from the past (imputation) are common tasks associated with time series data.\n",
+    "\n",
+    "- *Data Generation Function:* The text introduces a function, `generate_time_series()`, creating synthetic time series data for illustration. The function produces univariate time series with two sine waves of random frequencies and phases, plus some noise.\n",
+    "\n",
+    "- *Data Representation:* Time series input features are generally represented as 3D arrays of shape [batch size, time steps, dimensionality], where dimensionality is 1 for univariate and more for multivariate time series.\n",
+    "\n",
+    "**Creating Training, Validation, and Test Sets:**\n",
+    "\n",
+    "- *Data Splitting:* The generated time series data is split into training, validation, and test sets for model evaluation.\n",
+    "\n",
+    "- *Baseline Metrics:* Before employing Recurrent Neural Networks (RNNs), baseline metrics are established. Naive forecasting, predicting the last value in each series, and a simple fully connected network are used for comparison.\n",
+    "\n",
+    "**Implementing Simple RNN:**\n",
+    "\n",
+    "- *Introduction to Simple RNN:* A basic RNN model is introduced with a single layer containing a single neuron.\n",
+    "\n",
+    "- *Model Evaluation:* The simple RNN is evaluated, and its Mean Squared Error (MSE) is compared to baseline metrics.\n",
+    "\n",
+    "**Deepening RNNs:**\n",
+    "\n",
+    "- *Introduction to Deep RNN:* To enhance performance, multiple layers of cells are stacked, creating a deep RNN.\n",
+    "\n",
+    "- *Implementation:* The text provides a simple implementation of a deep RNN using three SimpleRNN layers.\n",
+    "\n",
+    "- *Model Evaluation:* The deep RNN is evaluated and outperforms the simple RNN and the fully connected network.\n",
+    "\n",
+    "**Fine-Tuning Model Architecture:**\n",
+    "\n",
+    "- *Optimizing Output Layer:* The text suggests replacing the output layer with a Dense layer for faster runtime and flexibility in choosing the output activation function.\n",
+    "\n",
+    "- *Model Adjustment:* Return sequences parameter is adjusted for the second (now last) recurrent layer.\n",
+    "\n",
+    "- *Training and Evaluation:* The modified model is trained and evaluated, demonstrating comparable performance.\n",
+    "\n",
+    "**Forecasting Multiple Time Steps:**\n",
+    "\n",
+    "- *Task Expansion:* The text introduces the idea of predicting multiple future values by changing the target appropriately.\n",
+    "\n",
+    "- *Anticipating Multiple Values:* The question arises about predicting the next 10 values instead of just one, prompting further exploration in the text.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also it is presented different approaches to time series forecasting using recurrent neural networks (RNNs) and related techniques. Here's a summarized overview:\n",
+    "\n",
+    "Approach 1: One-Step Forecasting\n",
+    "\n",
+    "Use a pre-trained RNN model to predict the next value in a time series.\n",
+    "Iterate this process by adding the predicted value to the inputs and predicting the next value.\n",
+    "Evaluation shows an MSE (Mean Squared Error) of about 0.029 on the validation set.\n",
+    "Approach 2: Multi-Step Forecasting with Sequence-to-Vector Model\n",
+    "\n",
+    "Train an RNN to predict the next 10 values at once using a sequence-to-vector model.\n",
+    "The output layer has 10 units instead of 1.\n",
+    "This model performs well, with an MSE for the next 10 time steps of about 0.008.\n",
+    "Approach 3: Sequence-to-Sequence RNN\n",
+    "\n",
+    "Train an RNN to predict the next 10 values at each time step, turning it into a sequence-to-sequence RNN.\n",
+    "Use TimeDistributed layer to apply the output Dense layer at every time step.\n",
+    "The model shows improved stability and speed during training, resulting in a validation MSE of about 0.006.\n",
+    "Dealing with Unstable Gradients\n",
+    "\n",
+    "Use techniques like good parameter initialization, faster optimizers, dropout, and gradient clipping to address the unstable gradients problem in training RNNs.\n",
+    "Handling Short-Term Memory Problem\n",
+    "\n",
+    "Introduce Long Short-Term Memory (LSTM) cells, which have proven effective in capturing long-term dependencies in data.\n",
+    "LSTM cells include forget, input, and output gates to control memory storage and retrieval.\n",
+    "Gated Recurrent Unit (GRU) Cells\n",
+    "\n",
+    "An alternative to LSTM, GRU cells simplify the architecture by merging short-term and long-term states.\n",
+    "GRU includes a single gate controller for forget and input gates and lacks an output gate.\n",
+    "1D Convolutional Layers\n",
+    "\n",
+    "Combine RNNs with 1D convolutional layers to process sequences.\n",
+    "Downsample input sequences to help RNNs capture longer patterns.\n",
+    "Use convolutional layers with appropriate padding and strides to adjust sequence lengths.\n",
+    "WaveNet Architecture\n",
+    "\n",
+    "Introduce the WaveNet architecture, which stacks 1D convolutional layers with increasing dilation rates to efficiently capture short- and long-term patterns.\n",
+    "The architecture involves multiple blocks of convolutional layers with varying dilation rates.\n",
+    "The approaches discussed provide insights into improving the performance of RNNs for time series forecasting by addressing challenges such as unstable gradients and short-term memory limitations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
